--- a/old/index.html
+++ b/old/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gerocoo Bistro</title>
 </head>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="style.css" >
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 <nav><div style='float:right; width: 100%;'></div>
   <nav class = "nav">
@@ -15,10 +15,6 @@
   <a href="storia.html">Chi Siamo</a>
   <button class="toggle-theme" id="toggle-theme">🌙</button>
 </div>
-
-<br>
-<br>
-<br>
 <a href="index.html"><img src="img/logo.png" alt="Gerocoo Logo" class="logo" style="width: 200px;" /></a>
 <h1 class="titolo"><a href="storia.html">GEROCOO BISTRO</a></h1>
 <div class="carousel">
@@ -32,6 +28,7 @@
 <hr />
 </nav>
 <body>
+  
       <h2 class="orange">Il Ristorante</h2>
       <p>Il Gerocoo Bistro offre pranzi e cene informali in un'atmosfera alla moda.
         Il menù cambia regolarmente per mettere in risalto gli ingredienti più freschi.</p>
@@ -98,5 +95,4 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </body>
-
 </html>
