--- a/bindex.html
+++ b/bindex.html
@@ -41,7 +41,7 @@
   </div>
   <div class="offcanvas-body">
     <ul class="nav flex-column">
-      <li class="nav-item"><a class="nav-link" data-target="#Menu">Menu</a></li>
+    <li class="nav-item"><a class="nav-link" data-target="#Menu">Menu</a></li>
 <li class="nav-item"><a class="nav-link" data-target="#Storia">Storia</a></li>
 <li class="nav-item"><a class="nav-link" data-target="#Chisiamo">Contatti</a></li>
 <li class="nav-item"><a class="nav-link" data-target="#Prenota">Prenota il tuo tavolo</a></li>
@@ -56,18 +56,16 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="menuModalLabel">Seleziona Portata</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
       </div>
-      <div class="modal-body">
-        <select id="menu-select" class="form-select" onchange="location.href=this.value;">
-          <option selected disabled></option>
-          <option value="#Antipasti">Antipasti</option>
-          <option value="#Primi">Primi</option>
-          <option value="#Secondi">Secondi</option>
-          <option value="#Dolci">Dolci</option>
-          <option value="#Bevande">Bevande</option>
-        </select>
+      <ul class="nav flex-column">
+          <li class="nav-item"><a class="nav-link" href="#Antipasti">Antipasti</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Primi">Primi</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Secondi">Secondi</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Dolci">Dolci</a></li>
+          <li class="nav-item"><a class="nav-link" href="#Bevande">Bevande</a></li>
+          </ul>
+        
       </div>
     </div>
   </div>
@@ -204,7 +202,7 @@
     </body>
     <body>
     <div class="section">
-  <h2 class="orange" id="bevande">Bevande</h2>
+  <h2 class="orange" id="Bevande">Bevande</h2>
   <div class="piatto">
     <span class="nome">Birra dello Stretto
       <span class="ingredienti">Birra artigianale messinese, 5% vol, gusto pieno e corposo</span>
