--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gerocoo Bistro</title>
+  <title>Gerocoo bistrot</title>
   <link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"  integrity="sha512-papmSR5i6Rx3e4+QeOZTnHlLMJQ7u5LOj+YqM0aNcfm3BQ3BSlUn8N+BB69U92t2bFi3p6gS2kOx7uqgUN2MMA=="  crossorigin="anonymous"  referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -58,9 +58,15 @@
 </div>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-<a href="index.html"><img src="img/logo.png" alt="Gerocoo Logo" class="logo" style="width: 200px;" /></a>
+<div style="display: flex; justify-content: center; margin-top: 50px;">
+  <div style="width: 230px; height: 220px; border-radius: 50%; box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); display: flex; align-items: center; justify-content: center; background-color: white;">
+    <a href="index.html">
+      <img src="img/logo.png" alt="Gerocoo Logo" class="logo" style="width: 300px; border-radius: 50%;" />
+    </a>
+  </div>
+</div>
 
-<h1 class="titolo"><a href="storia.html">GEROCOO BISTRO</a></h1>
+<h1 class="titolo"><a href="storia.html">GEROCOO BISTROT</a></h1>
 <div class="carousel">
   <div class="carousel-cell"><img src="img/1.png" alt="img 1"></div>
   <div class="carousel-cell"><img src="img/2.jpg" alt="img 2"></div>
@@ -270,18 +276,18 @@
             </div>
             <div class="container contatti">
               <h2 class="orange">Contatti</h2>
-              <p><strong>Email:</strong> info@gerocoobistro.com</p>
+              <p><strong>Email:</strong> info@gerocoobistrot.com</p>
               <p><strong>Telefono fisso:</strong> +390911234567</p>
               <p><strong>Telefono mobile:</strong> +393209876543</p>
               <div class="social-links" style="margin-top: 20px;">
     <div style="display: flex; gap: 20px; align-items: center; justify-content: center; margin-top: 20px;">
   <div>
     <i class="fab fa-instagram" style="margin-right: 6px;"></i>
-    <a href="https://instagram.com/GerocooBistro" target="_blank"><img src ="img/inst.png" style="width: 35px;"></a>
+    <a href="https://instagram.com/GerocooBistrot" target="_blank"><img src ="img/inst.png" style="width: 35px;"></a>
   </div>
   <div>
     <i class="fab fa-facebook" style="margin-right: 6px;"></i>
-    <a href="https://facebook.com/GerocooBistro" target="_blank"><img src ="img/facebook.png" style="width: 42px;"></a>
+    <a href="https://facebook.com/GerocooBistrot" target="_blank"><img src ="img/facebook.png" style="width: 42px;"></a>
   </div>
 </div>
 </div>
@@ -338,7 +344,12 @@
           </form>
         </div>
       </div>
+      
       </body>
+
+ <div class="footer-section logo-footer">
+<h4>Dove il gusto è di casa, ma il grembiule è Rock.</h4>
+</div>
       <script src="script.js"></script>
       <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
       <script src="https://unpkg.com/flickity@2/dist/flickity-fade.js"></script>
@@ -347,3 +358,4 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+
