--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="it">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +10,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body>
   <nav id="navbar-example2" class="topnav">
     <button class="toggle-theme" id="toggle-theme">🌙</button>
@@ -63,13 +61,13 @@
 </div>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-<div style="display: flex; justify-content: center; margin-top: 50px;">
 
-  <a href="index.html">
-    <img src="img/logo.png" alt="Gerocoo Logo" class="logo" style="width: 250px; border-radius: 50%;" />
+    <div style="display: flex; justify-content: center; margin-top: 50px;">
+  <img src="img/logo.png" alt="Bistro Catering Logo" class="logo" />
+</div>
   </a>
 </div>
-</div>
+
 
 <h1 class="titolo"><a href="storia.html">GEROCOO BISTROT</a></h1>
 <div class="carousel">
