logo (again and again)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 
     <div style="display: flex; justify-content: center; margin-top: 50px;">
-  <img src="img/logo.png" alt="Bistro Catering Logo" class="logo" />
+  <img src="img/logo1.png" alt="Bistro Catering Logo" class="logo" />
 </div>
   </a>
 </div>
